// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PTY line discipline matrix > js-node > backspace > js-node/backspace/echo 1`] = `
"# js-node/backspace/echo
cols=80 rows=24 cursor=1,3
01|#START id=backspace
02|#MODE want=cooked rc=0
03|#READY tag=erase
04|a 
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > backspace > js-node/backspace/report 1`] = `
"# js-node/backspace/report
cols=80 rows=24 cursor=0,6
01|#START id=backspace
02|#MODE want=cooked rc=0
03|#READY tag=erase
04|a 
05|#BYTES tag=erase n=2 hex=61 0A text=a\\n
06|#DONE id=backspace
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > control-char-echo > js-node/control-char-echo/echo 1`] = `
"# js-node/control-char-echo/echo
cols=80 rows=24 cursor=2,3
01|#START id=control-char-echo
02|#MODE want=cooked rc=0
03|#READY tag=ctl
04|^A
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > control-char-echo > js-node/control-char-echo/report 1`] = `
"# js-node/control-char-echo/report
cols=80 rows=24 cursor=0,6
01|#START id=control-char-echo
02|#MODE want=cooked rc=0
03|#READY tag=ctl
04|^A
05|#BYTES tag=ctl n=2 hex=01 0A text=\\x01\\n
06|#DONE id=control-char-echo
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > cooked-echo > js-node/cooked-echo/after-newline 1`] = `
"# js-node/cooked-echo/after-newline
cols=80 rows=24 cursor=0,6
01|#START id=cooked-echo
02|#MODE want=cooked rc=0
03|#READY tag=echo
04|abc
05|#BYTES tag=echo n=4 hex=61 62 63 0A text=abc\\n
06|#DONE id=cooked-echo
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > cooked-echo > js-node/cooked-echo/echo-while-blocked 1`] = `
"# js-node/cooked-echo/echo-while-blocked
cols=80 rows=24 cursor=3,3
01|#START id=cooked-echo
02|#MODE want=cooked rc=0
03|#READY tag=echo
04|abc
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > cpr > js-node/cpr/cpr-reply 1`] = `
"# js-node/cpr/cpr-reply
cols=80 rows=24 cursor=0,5
01|#START id=cpr
02|#MODE want=raw rc=0
03|#CPR sent=1
04|#CPRREPLY n=6 hex=1B 5B 33 3B 31 52 text=\\e[3;1R
05|#DONE id=cpr
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > eof > js-node/eof/done 1`] = `
"# js-node/eof/done
cols=80 rows=24 cursor=0,5
01|#START id=eof
02|#MODE want=cooked rc=0
03|#READY tag=eof
04|#EOF tag=eof n=0
05|#DONE id=eof
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > eof > js-node/eof/ready 1`] = `
"# js-node/eof/ready
cols=80 rows=24 cursor=0,3
01|#START id=eof
02|#MODE want=cooked rc=0
03|#READY tag=eof
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > erase-ctrl-h > js-node/erase-ctrl-h/echo 1`] = `
"# js-node/erase-ctrl-h/echo
cols=80 rows=24 cursor=1,3
01|#START id=erase-ctrl-h
02|#MODE want=cooked rc=0
03|#READY tag=eraseh
04|a 
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > erase-ctrl-h > js-node/erase-ctrl-h/report 1`] = `
"# js-node/erase-ctrl-h/report
cols=80 rows=24 cursor=0,6
01|#START id=erase-ctrl-h
02|#MODE want=cooked rc=0
03|#READY tag=eraseh
04|a 
05|#BYTES tag=eraseh n=2 hex=61 0A text=a\\n
06|#DONE id=erase-ctrl-h
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > icrnl > js-node/icrnl/echo 1`] = `
"# js-node/icrnl/echo
cols=80 rows=24 cursor=1,3
01|#START id=icrnl
02|#MODE want=cooked rc=0
03|#READY tag=icrnl
04|x
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > icrnl > js-node/icrnl/final 1`] = `
"# js-node/icrnl/final
cols=80 rows=24 cursor=0,6
01|#START id=icrnl
02|#MODE want=cooked rc=0
03|#READY tag=icrnl
04|x
05|#BYTES tag=icrnl n=2 hex=78 0A text=x\\n
06|#DONE id=icrnl
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > isatty > js-node/isatty/tty 1`] = `
"# js-node/isatty/tty
cols=80 rows=24 cursor=0,3
01|#START id=isatty
02|#TTY in=1 out=1 err=1
03|#DONE id=isatty
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > kill-line > js-node/kill-line/after-kill 1`] = `
"# js-node/kill-line/after-kill
cols=80 rows=24 cursor=0,3
01|#START id=kill-line
02|#MODE want=cooked rc=0
03|#READY tag=kill
04|   
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > kill-line > js-node/kill-line/report 1`] = `
"# js-node/kill-line/report
cols=80 rows=24 cursor=0,6
01|#START id=kill-line
02|#MODE want=cooked rc=0
03|#READY tag=kill
04|   
05|#BYTES tag=kill n=1 hex=0A text=\\n
06|#DONE id=kill-line
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > line-buffering > js-node/line-buffering/delivered 1`] = `
"# js-node/line-buffering/delivered
cols=80 rows=24 cursor=0,6
01|#START id=line-buffering
02|#MODE want=cooked rc=0
03|#READY tag=canon
04|hello
05|#BYTES tag=canon n=6 hex=68 65 6C 6C 6F 0A text=hello\\n
06|#DONE id=line-buffering
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > line-buffering > js-node/line-buffering/held 1`] = `
"# js-node/line-buffering/held
cols=80 rows=24 cursor=5,3
01|#START id=line-buffering
02|#MODE want=cooked rc=0
03|#READY tag=canon
04|hello
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > raw-ctrlc-byte > js-node/raw-ctrlc-byte/after 1`] = `
"# js-node/raw-ctrlc-byte/after
cols=80 rows=24 cursor=0,5
01|#START id=raw-ctrlc-byte
02|#MODE want=raw rc=0
03|#READY tag=rawc
04|#BYTES tag=rawc n=1 hex=03 text=\\x03
05|#DONE id=raw-ctrlc-byte
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > raw-ctrlc-byte > js-node/raw-ctrlc-byte/before-input 1`] = `
"# js-node/raw-ctrlc-byte/before-input
cols=80 rows=24 cursor=0,3
01|#START id=raw-ctrlc-byte
02|#MODE want=raw rc=0
03|#READY tag=rawc
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > raw-no-echo > js-node/raw-no-echo/blocked 1`] = `
"# js-node/raw-no-echo/blocked
cols=80 rows=24 cursor=0,3
01|#START id=raw-no-echo
02|#MODE want=raw rc=0
03|#READY tag=raw
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > raw-no-echo > js-node/raw-no-echo/done 1`] = `
"# js-node/raw-no-echo/done
cols=80 rows=24 cursor=0,5
01|#START id=raw-no-echo
02|#MODE want=raw rc=0
03|#READY tag=raw
04|#BYTES tag=raw n=4 hex=61 62 63 21 text=abc!
05|#DONE id=raw-no-echo
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > resize-sigwinch > js-node/resize-sigwinch/resize 1`] = `
"# js-node/resize-sigwinch/resize
cols=120 rows=40 cursor=0,7
01|#START id=resize-sigwinch
02|#SIZE tag=before rc=0 cols=80 rows=24
03|#READY tag=resize
04|#SIG name=SIGWINCH
05|#SIZE tag=after rc=0 cols=120 rows=40
06|!
07|#DONE id=resize-sigwinch
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|
25|
26|
27|
28|
29|
30|
31|
32|
33|
34|
35|
36|
37|
38|
39|
40|"
`;

exports[`PTY line discipline matrix > js-node > sigint > js-node/sigint/after 1`] = `
"# js-node/sigint/after
cols=80 rows=24 cursor=0,3
01|#START id=sigint
02|#MODE want=cooked rc=0
03|#READY tag=sigint
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > sigquit > js-node/sigquit/after 1`] = `
"# js-node/sigquit/after
cols=80 rows=24 cursor=0,3
01|#START id=sigquit
02|#MODE want=cooked rc=0
03|#READY tag=sigquit
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > vintr-buffer > js-node/vintr-buffer/after 1`] = `
"# js-node/vintr-buffer/after
cols=80 rows=24 cursor=3,3
01|#START id=vintr-buffer
02|#MODE want=cooked rc=0
03|#READY tag=vintrbuf
04|abc
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > vsusp > js-node/vsusp/after 1`] = `
"# js-node/vsusp/after
cols=80 rows=24 cursor=0,3
01|#START id=vsusp
02|#MODE want=cooked rc=0
03|#READY tag=susp
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > winsize > js-node/winsize/winsize 1`] = `
"# js-node/winsize/winsize
cols=100 rows=37 cursor=0,3
01|#START id=winsize
02|#SIZE tag=open rc=0 cols=100 rows=37
03|#DONE id=winsize
04|
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|
25|
26|
27|
28|
29|
30|
31|
32|
33|
34|
35|
36|
37|"
`;

exports[`PTY line discipline matrix > js-node > word-erase > js-node/word-erase/echo 1`] = `
"# js-node/word-erase/echo
cols=80 rows=24 cursor=4,3
01|#START id=word-erase
02|#MODE want=cooked rc=0
03|#READY tag=werase
04|foo    
05|
06|
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;

exports[`PTY line discipline matrix > js-node > word-erase > js-node/word-erase/report 1`] = `
"# js-node/word-erase/report
cols=80 rows=24 cursor=0,6
01|#START id=word-erase
02|#MODE want=cooked rc=0
03|#READY tag=werase
04|foo    
05|#BYTES tag=werase n=5 hex=66 6F 6F 20 0A text=foo \\n
06|#DONE id=word-erase
07|
08|
09|
10|
11|
12|
13|
14|
15|
16|
17|
18|
19|
20|
21|
22|
23|
24|"
`;
